--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,35 @@
 body {
     background-color: #EAFCF4;
 }
+
+/* hover pour les boutons "qui, séance, témoignages, blog" */
+.hover:hover
+{
+    color: black;
+    background-color: #EAFCF4;
+}
+
+.hover:hover{
+    color: rgb(36, 116, 190);
+    box-shadow: -2px 2px 15px 0px rgba(0,0,0,0.75);
+    background-color: #EAFCF4;
+    border: 2rem grey;
+    transform: scale(1.2);
+}
+
+/* fin hover */
+
+
+@media all and (max-width: 640px) {
+  .display {
+    display:none;
+    clear:both;
+  }
+}
+
+@media all and (max-width: 640px) {
+  .hover {
+    display:none;
+    clear:both;
+  }
+}
