--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,19 @@ body {
 }
 
 .hover:hover{
-    color: rgb(36, 116, 190);
-    box-shadow: -2px 2px 15px 0px rgb(36, 116, 190);
-    background-color: rgb(36, 116, 190);
-    border: 2rem grey;
-    transform: scale(1.2);
-}
 
+   color: rgb(36, 116, 190);
+   box-shadow: -2px 2px 15px 0px rgba(0,0,0,0.75);
+   background-color: #EAFCF4;
+   border: 2rem grey;
+   transform: scale(1.2);
+}
 .rounded :hover 
 {
   width: 150px !important; /* on affiche l'image au carré */
   height: 150px !important;
   border-radius: 50% !important; 
-}
+} 
 /* MENU */
 /* menu nav2 */
 
@@ -50,24 +50,27 @@ body {
     padding: 10px;
 }
 
-@media(min-width:768px){
-    .div{
-        width: 750px;
-        background: orange;
-    }
-}
-@media(min-width: 992px){
-    .div{
-        width: 970px;
-        background: blue;
-    }
-}
-@media(min-width: 1200px){
-    .div{
-        width: 1170px;
-        background:green;
-    }
-}
+@media all and (max-width: 640px) {
+
+ .head{
+
+   display:none;
+
+   clear:both;
+
+ }
+
+/* }@media all and (max-width: 640px) {
+
+ #nav2 {
+
+   display:inline;
+
+   clear:both;
+
+ }
+
+} */
 
 /*MEDIA QUERIES permettent de ré-arranger la disposition du site en fonction des tailles de navigateurs en px - cf. viewportsizes.com -3 tailles suffisent. On peut faire une feuille de style standard et une CSS rien que pour le RESPONSIVE de base la zone est rouge, si l'écran est de plus de 768px et jusqu'à 992px la zone est orange...*/
 /*
@@ -212,7 +215,7 @@ section{
 
 
 */
-.facebook
+/* .facebook
 {
   width: 25px!important;
-}
+} */
