integration seance bug image a regle

--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,10 @@ div.card-body{
     background-color:  #EAFCF4 !important;
    
 }
+p.list-group-item{
+    border: none;
+}
+
+li{
+    list-style: none;
+}
