--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,71 @@
 /* RESET */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
+
 /* REGLAGES GENEREAUX */
 body {
-    background-color: #EAFCF4;
+  background-color: #EAFCF4;
 }
+
+/* HEADER & FOOTER */
+.rounded :hover {
+  width: 150px !important;
+  /* on affiche l'image au carré */
+  height: 150px !important;
+  border-radius: 50% !important;
+}
+
+/* MENU */
+/* menu navbarPrimaire et navBarSecondaire */
+
+
+
+/* MEDIA QUERRIES */
+/* Seule la navBarSecondaire est appelée à disparaitre lorsque l'écran est compris entre ]1200 ->[ */
+@media(min-width: 1200px) {
+  #navbarSecondaire {
+    display: none;
+  }
+
+}
+
+
+/* Seule la navBarPrimaire est appelée à disparaitre lorsque l'écran est compris entre ]<- 1200[ */
+@media(max-width: 1200px) {
+  #navbarPrimaire {
+    display: none;
+  }
+}
+
+/* ACCUEIL */
 /* hover pour les boutons "qui, séance, témoignages, blog" */
-.hover:hover{
-     color: black;
-    background-color: #EAFCF4;
-    color: rgb(36, 116, 190);
-    box-shadow: -2px 2px 15px 0px rgba(0,0,0,0.75);
-    background-color: #EAFCF4;
-    border: 2rem grey;
-    transform: scale(1.2);
+.hover:hover {
+  color: black;
+  background-color: #EAFCF4;
 }
+
+.hover:hover {
+  color: rgb(36, 116, 190);
+  box-shadow: -2px 2px 15px 0px rgba(0, 0, 0, 0.75);
+  background-color: #EAFCF4;
+  border: 2rem grey;
+  transform: scale(1.2);
+}
+
 /* fin hover */
 
 /* Photo de profil et bouton après */
 @media all and (max-width: 640px) {
   .display {
-    display:none;
-    clear:both;
+    display: none;
+    clear: both;
   }
 }
+
 @media all and (max-width: 640px) {
   .hover {
-    display:none;
-    clear:both;
+    display: none;
+    clear: both;
   }
 }
