--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -15,9 +15,14 @@ body {
     transition: all 0.5s ease-in-out 0s;
 }
 
+a {
+    text-decoration: none;
+}
+
 /********************************************************* CONNEXION *********************************************************/
 .form {
     margin-top: 350px !important;
+
 }
 
 /***************************************************** ACCUEIL ADMIN *****************************************************/
@@ -37,11 +42,17 @@ body {
     color: #fff;
 }
 
-
-a>.btn btn-danger rounded-pill offset-10 {
+/* bootton de déconnexion */
+a>.btn .btn-danger .rounded-pill .offset-10 {
     background: red !important;
     color: #fff;
     box-shadow: -6px 6px 0 blue;
+}
+
+/* Menu accueil admin */
+.listAdmin {
+    margin: 0 auto;
+    margin-top: 15rem;
 }
 
 /********************************** DECONNEXION **********************************/
